--- a/platformio.ini
+++ b/platformio.ini
@@ -25,8 +25,9 @@ platform = espressif32
 board = lilygo-t-amoled
 framework = arduino
 board_dir = boards
+monitor_speed = 115200
 
 build_flags = 
     -DBOARD_HAS_PSRAM
-    -UARDUINO_USB_CDC_ON_BOOT   ;Opening this line will not block startup
-    ; -DARDUINO_USB_CDC_ON_BOOT=1
+    ;-UARDUINO_USB_CDC_ON_BOOT   ;Opening this line will not block startup
+    -DARDUINO_USB_CDC_ON_BOOT=1
