--- a/platformio.ini
+++ b/platformio.ini
@@ -29,5 +29,5 @@ monitor_speed = 115200
 
 build_flags = 
     -DBOARD_HAS_PSRAM
-    ;-UARDUINO_USB_CDC_ON_BOOT   ;Opening this line will not block startup
-    -DARDUINO_USB_CDC_ON_BOOT=1
+    -UARDUINO_USB_CDC_ON_BOOT   ;Opening this line will not block startup
+    ;-DARDUINO_USB_CDC_ON_BOOT=1
