--- a/platformio.ini
+++ b/platformio.ini
@@ -17,7 +17,7 @@
 ; src_dir = examples/CameraShield
 ; src_dir = examples/octagon_on_amoled
 ; src_dir = examples/mirror_display
- src_dir = examples/epOS
+;src_dir = examples/epOS
 
 ;FLASH = 16M PSRAM = 8M OPI PSRAM
 [env:T-Display-AMOLED]
